--- a/src/TEST.Application/TEST.Application.csproj
+++ b/src/TEST.Application/TEST.Application.csproj
@@ -6,4 +6,12 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+        <PackageReference Include="Microsoft.Data.SqlClient" Version="6.1.0-preview1.25120.4"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\TEST.Models\TEST.Models.csproj"/>
+    </ItemGroup>
+
 </Project>
